--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "jquery": "2.1.4",
         "load-script": "1.0.0",
         "lodash": "3.10.0",
+        "griddle-react": "0.2.13",
         "moment": "2.10.3",
         "when": "3.7.3",
         "react": "0.13.3",
