--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
     "license": "Pubic Domain",
     "dependencies": {
         "bootstrap": "3.3.5",
-        "classnames": "2.1.2",
+        "classnames": "2.1.3",
         "jquery": "2.1.4",
         "load-script": "1.0.0",
         "lodash": "3.10.0",
         "griddle-react": "0.2.13",
         "moment": "2.10.3",
-        "when": "3.7.3",
         "react": "0.13.3",
-        "react-cookie": "0.2.3",
+        "react-cookie": "0.2.5",
         "react-ga": "1.0.12",
         "react-portal": "0.6.0",
         "react-router": "0.13.3",
-        "reflux": "0.2.8"
+        "reflux": "0.2.8",
+        "when": "3.7.3"
     },
     "devDependencies": {
-        "babel-loader": "5.2.2",
+        "babel-loader": "5.3.1",
         "compression-webpack-plugin": "0.2.0",
-        "css-loader": "0.15.1",
+        "css-loader": "0.15.2",
         "file-loader": "0.8.4",
         "gulp": "3.9.0",
         "gulp-clean": "0.3.1",
@@ -35,11 +35,11 @@
         "gulp-stylus": "2.0.5",
         "gulp-util": "3.0.6",
         "gulp-webpack": "1.5.0",
-        "react-hot-loader": "1.2.7",
+        "react-hot-loader": "1.2.8",
         "run-sequence": "1.1.1",
         "style-loader": "0.12.3",
         "url-loader": "0.5.6",
-        "webpack": "1.10.0",
+        "webpack": "1.10.1",
         "webpack-dev-server": "1.10.1"
     }
 }
