--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
         "no-labels": [2],
         "indent": 2,
         "vars-on-top": 2,
+        "camelcase": [2, {"properties": "never"}],
 
         "react/jsx-no-undef": 2,
         "react/jsx-uses-react": 2,
