--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "license": "Pubic Domain",
     "dependencies": {
         "bootstrap": "3.3.5",
+        "checkit": "0.5.1",
         "classnames": "2.1.3",
         "jquery": "2.1.4",
         "load-script": "1.0.0",
