--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "file-loader": "0.8.4",
         "gulp": "3.9.0",
         "gulp-clean": "0.3.1",
+        "gulp-imagemin": "2.3.0",
         "gulp-rsync": "0.0.5",
         "gulp-stylus": "2.0.5",
         "gulp-util": "3.0.6",
