--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
         "gulp-webpack": "1.5.0",
         "react-hot-loader": "1.2.8",
         "run-sequence": "1.1.1",
+        "shipit-captain": "0.4.0",
+        "shipit-cli": "1.3.0",
+        "shipit-deploy": "2.0.0",
+        "shipit-utils": "1.3.0",
         "style-loader": "0.12.3",
         "url-loader": "0.5.6",
         "webpack": "1.10.1",
