--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     },
     "devDependencies": {
         "babel-loader": "5.3.2",
+        "bluebird": "2.9.34",
         "compression-webpack-plugin": "0.2.0",
+        "chalk": "1.1.0",
         "css-loader": "0.15.4",
         "file-loader": "0.8.4",
         "gulp": "3.9.0",
@@ -44,7 +46,6 @@
         "react-hot-loader": "1.2.8",
         "run-sequence": "1.1.1",
         "shipit-captain": "0.4.0",
-        "shipit-cli": "1.3.0",
         "shipit-deploy": "2.0.0",
         "shipit-utils": "1.3.0",
         "style-loader": "0.12.3",
