--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "author": "mcnazar@gmail.com",
     "dependencies": {
         "bootstrap": "3.3.5",
+        "bootstrap-markdown": "2.9.0",
         "checkit": "0.5.1",
         "classnames": "2.1.3",
         "jquery": "2.1.4",
         "load-script": "1.0.0",
         "lodash": "3.10.0",
         "griddle-react": "0.2.13",
+        "marked": "0.3.3",
         "moment": "2.10.3",
         "react": "0.13.3",
         "react-cookie": "0.2.5",
@@ -25,9 +27,6 @@
         "react-social": "0.1.5",
         "react-textarea-autosize": "2.3.1",
         "reflux": "0.2.9",
-        "scribe-editor" :"1.4.14",
-        "scribe-plugin-sanitizer": "0.1.9",
-        "scribe-plugin-toolbar": "0.2.0",
         "when": "3.7.3"
     },
     "devDependencies": {
