--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "bootstrap-markdown": "2.9.0",
         "checkit": "0.5.1",
         "classnames": "2.1.3",
+        "font-awesome": "4.3.0",
         "jquery": "2.1.4",
         "load-script": "1.0.0",
         "lodash": "3.10.0",
