--- a/package.json
+++ b/package.json
@@ -28,19 +28,20 @@
         "font-awesome": "4.4.0",
         "jquery": "2.1.4",
         "load-script": "1.0.0",
-        "lodash": "3.10.0",
+        "lodash": "3.10.1",
         "griddle-react": "0.2.13",
-        "marked": "0.3.3",
-        "moment": "2.10.3",
+        "marked": "0.3.5",
+        "moment": "2.10.6",
         "react": "0.13.3",
+        "react-bootstrap": "0.24.3",
         "react-cookie": "0.2.5",
-        "react-ga": "1.0.12",
+        "react-ga": "1.1.0",
         "react-doc-meta": "0.2.0",
-        "react-portal": "0.6.0",
+        "react-portal": "0.7.0",
         "react-router": "0.13.3",
         "react-social": "0.1.5",
-        "react-textarea-autosize": "2.3.1",
-        "reflux": "0.2.9",
+        "react-textarea-autosize": "2.4.2",
+        "reflux": "0.2.11",
         "when": "3.7.3"
     },
     "devDependencies": {
@@ -48,22 +49,22 @@
         "bluebird": "2.9.34",
         "compression-webpack-plugin": "0.2.0",
         "chalk": "1.1.0",
-        "css-loader": "0.15.4",
+        "css-loader": "0.15.6",
         "file-loader": "0.8.4",
         "gulp": "3.9.0",
         "gulp-clean": "0.3.1",
         "gulp-imagemin": "2.3.0",
-        "gulp-stylus": "2.0.5",
+        "gulp-stylus": "2.0.6",
         "gulp-util": "3.0.6",
         "gulp-webpack": "1.5.0",
         "react-hot-loader": "1.2.8",
-        "run-sequence": "1.1.1",
+        "run-sequence": "1.1.2",
         "shipit-captain": "0.4.2",
         "shipit-deploy": "2.0.0",
         "shipit-utils": "1.3.0",
         "style-loader": "0.12.3",
         "url-loader": "0.5.6",
-        "webpack": "1.10.1",
+        "webpack": "1.10.5",
         "webpack-dev-server": "1.10.1"
     }
 }
