added recipe paginator

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-cookie": "0.2.5",
         "react-ga": "1.1.0",
         "react-doc-meta": "0.2.0",
+        "react-pager": "1.1.1",
         "react-portal": "0.7.0",
         "react-router": "0.13.3",
         "react-social": "0.1.5",
